--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@prisma/client": "^6.4.1",
+    "@splinetool/react-spline": "^4.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
