--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "resend": "^4.1.2",
     "sonner": "^2.0.1",
+    "three": "^0.174.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
